# research-intelligence-server

./: README.md  main.py  pyproject.toml
src/research_server/: server.py
src/research_server/data/: papers.py  store.py
src/research_server/models/: domain.py
src/research_server/observability/: logging.py
src/research_server/primitives/: prompts.py  resources.py  tools.py
src/research_server/transport/: http.py  stdio.py
tests/: test_prompts.py  test_resources.py  test_tools.py
